--- a/ADOTask2 Inheritance/ADOTask2 Inheritance.csproj
+++ b/ADOTask2 Inheritance/ADOTask2 Inheritance.csproj
@@ -47,9 +47,12 @@
     <Compile Include="Task2.1\entity\Student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task2.2\entity\Author.cs" />
+    <Compile Include="Task2.2\entity\Book.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
